Fixed squashed Bootstrap cards

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -18,6 +18,7 @@
   position: relative;
   margin-top: 30px;
   background-position: center;
+  margin-left: 20px;
 }
 
 .card-link {
