--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,13 +4,14 @@
 
 .card-product {
   overflow: hidden;
-  width: 500px;
+  width: 600px;
   height: 120px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
   margin-bottom: 30px;
+  margin-left: 20px;
 }
 
 .card-product img {
